@@ -515,6 +515,14 @@
 #
 ##########################################################################################################
 #
+## IPMI_System_Firmware_Progress_Device_Present
+#
+# IPMI_System_Firmware_Progress_Device_Present_Device_No_Event                Nominal
+# IPMI_System_Firmware_Progress_Device_Present_Device_Removed_Device_Absent   Critical
+# IPMI_System_Firmware_Progress_Device_Present_Device_Inserted_Device_Present Nominal
+#
+##########################################################################################################
+#
 ## IPMI_System_Firmware_Progress_Transition_Severity
 #
 # IPMI_System_Firmware_Progress_Transition_Severity_No_Event                                         Nominal
